--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,9 @@
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
-    "username": "seu_usuario",
-    "password": "sua_senha",
-    "database": "nome_do_seu_banco_de_dados",
+    "username": "postgres",
+    "password": "1234",
+    "database": "DevReport",
     "entities": [
       "dist/entity/**/*.js"
     ],
